--- a/armas.html
+++ b/armas.html
@@ -5,15 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VCF - Registrar Armas</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Registrar Armas</h1>
         <div class="transaction-input">
-            <input type="text" id="weapon" placeholder="Tipo de arma">
-            <input type="number" id="quantity" placeholder="Cantidad de armas">
-            <input type="text" id="recipient" placeholder="Nombre del destinatario">
-            <button id="saveWeaponButton">Registrar Arma</button>
+            <input type="text" id="weapon" placeholder="Tipo de Arma">
+            <input type="number" id="quantity" placeholder="Cantidad">
+            <input type="text" id="recipient" placeholder="Destinatario">
+            <button id="saveWeaponButton">Guardar Arma</button>
         </div>
         <a href="index.html" class="back-link">Volver</a>
     </div>
