--- a/Index.html
+++ b/Index.html
@@ -15,5 +15,8 @@
             <a href="registro.html" class="menu-link">Ver Registro</a>
         </div>
     </div>
+    <script src="script.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-database.js"></script>
 </body>
 </html>
