--- a/registro.html
+++ b/registro.html
@@ -18,5 +18,7 @@
         <a href="index.html" class="back-link">Volver</a>
     </div>
     <script src="script.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-database.js"></script>
 </body>
 </html>
