--- a/armas.html
+++ b/armas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+    <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
     <div class="container">
@@ -19,9 +20,5 @@
         </div>
         <a href="index.html" class="back-link">Volver</a>
     </div>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
-<script src="script.js"></script>
-
 </body>
 </html>
